# characters-counter

./: .flake8  .gitignore  README.md  app.py  frequency_calculator.py  logging_config.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yaml  release.yaml
characters-counter/: characters-counter.py
characters_counter/: __init__.py  characters_counter.py  frequency_calculator.py  logging_config.py
charcounter/: frequency_calculator.py  logging_config.py
tests/: conftest.py  test_characters_counter.py  test_count_character_frequency.py  test_count_characters_оссurrence.py  test_frequency_calculator.py  text.txt  text_sample.txt
