[tool.black]
line_length = 120
target-version = ['py312']
skip_magic_trailing_comma = true

[tool.isort]
line_length = 120
profile = "black"
py_version = 312
skip_glob = ["myenv"]
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_no_return = true
show_error_context = true
show_column_numbers = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-v --cov=. --cov-fail-under=90 --basetemp=tests/pytest_tmp"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "tests/*",
    ]

[tool.poetry]
name = "characters-counter"
version = "0.1.0"
description = ""
authors = ["Kristina Kulbych <k.kulbych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "24.10.0"
isort = "5.13.2"
flake8 = "7.1.1"
mypy = "1.12.0"
pytest = "8.3.3"
pytest-cov = "5.0.0"
typer = "0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
